--- a/public/views/donate-modern.ejs
+++ b/public/views/donate-modern.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Support Projexia - Donate</title>
+    <link rel="icon" type="image/jpeg" href="/images/favicon.jpg" />
     
     <!-- CSS Files -->
     <link rel="stylesheet" href="/css/projexia-design-system.css" />
@@ -163,7 +164,7 @@
                         <h3>Partner With Us</h3>
                         <p>Interested in partnering with Projexia? We're always looking for sponsors and collaborators who share our vision.</p>
                         <p style="font-size: 0.9rem; color: hsl(var(--primary));">Get in touch with our team to discuss partnership opportunities.</p>
-                        <a href="mailto:contact@projexia.dev" class="donate-button">Contact Us</a>
+                        <a href="https://www.facebook.com/profile.php?id=61584430631441" target="_blank" rel="noopener noreferrer" class="donate-button">Contact Us</a>
                     </div>
                 </div>
 
