--- a/public/views/signup.ejs
+++ b/public/views/signup.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Get Started - Projexia</title>
+    <link rel="icon" type="image/jpeg" href="/images/favicon.jpg" />
     <link rel="stylesheet" href="/css/projexia-design-system.css" />
     <link rel="stylesheet" href="/css/navbar-modern.css" />
     <link rel="stylesheet" href="/css/footer-modern.css" />
